--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,3 +1,4 @@
+<div class="booyah-box col-xs-10 col-xs-offset-1">
 <h2>Sign up</h2>
 
 <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
@@ -12,7 +13,8 @@
     <%= f.label :password %>
     <% if @minimum_password_length %>
     <em>(<%= @minimum_password_length %> characters minimum)</em>
-    <% end %><br />
+    <% end %>
+    <br />
     <%= f.password_field :password, autocomplete: "off" %>
   </div>
 
@@ -21,9 +23,13 @@
     <%= f.password_field :password_confirmation, autocomplete: "off" %>
   </div>
 
+<br />
   <div class="actions">
     <%= f.submit "Sign up" %>
   </div>
 <% end %>
-
 <%= render "devise/shared/links" %>
+<br />
+<br />
+</div>
+
