--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -25,16 +25,18 @@
     <!-- Collect the nav links, forms, and other content for toggling -->
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav">
-        <li class="active"><a href="#">Link</a></li>
-        <li><a href="#">Link</a></li>
+        <li>
+          <%= link_to 'See All Courses', courses_path %>
+        </li>
+      </ul>
       <ul class="nav navbar-nav navbar-right">
+        <li><a href="#">Link</a></li>
       	<% if user_signed_in? %>
         <li><%= link_to 'Sign out', destroy_user_session_path, :method => :delete %></li>
       <% else %>
         <li><%= link_to 'Sign in', new_user_session_path %></li>
         <li><%= link_to 'Sign up', new_user_registration_path %></li>
       <% end %>
-        <li><a href="#">Link</a></li>
       </ul>
     </div><!-- /.navbar-collapse -->
   </div><!-- /.container-fluid -->
