--- a/app/views/instructor/courses/show.html.erb
+++ b/app/views/instructor/courses/show.html.erb
@@ -4,5 +4,22 @@
   <h2 class="text-center"><%= @course.description %>
   <br />
   <h3 class="text-center"><%= @course.cost %></h3>
+  <br />
+  <%= link_to 'Preview As Student...', course_path(@course), :class => 'btn btn-warning pull-right' %>
+  <br class="clr" />
+  
 
+  <div class="text-center">
+    <%= link_to 'Add a new section...', new_instructor_course_section_path(@course), :class => 'btn btn-primary btn-lg' %>
+  </div>
+
+  <ul>
+    <% @course.sections.each do |section| %>
+    <li>
+      <%= section.title %>
+    </li>
+    <% end %>
+  </ul>
+
+  
 </div>
