--- a/app/views/instructor/courses/show.html.erb
+++ b/app/views/instructor/courses/show.html.erb
@@ -1,20 +1,20 @@
 <br />
 <div class="booyah-box col-xs-10 col-xs-offset-1">
-  <h1 class="text-center"><%= @course.title %></h1>
-  <h2 class="text-center"><%= @course.description %>
+  <h1 class="text-center"><%= current_course.title %></h1>
+  <h2 class="text-center"><%= current_course.description %>
   <br />
-  <h3 class="text-center"><%= @course.cost %></h3>
+  <h3 class="text-center"><%= current_course.cost %></h3>
   <br />
-  <%= link_to 'Preview As Student...', course_path(@course), :class => 'btn btn-warning pull-right' %>
+  <%= link_to 'Preview As Student...', course_path(current_course), :class => 'btn btn-warning pull-right' %>
   <br class="clr" />
   
 
   <div class="text-center">
-    <%= link_to 'Add a new section...', new_instructor_course_section_path(@course), :class => 'btn btn-primary btn-lg' %>
+    <%= link_to 'Add a new section...', new_instructor_course_section_path(current_course), :class => 'btn btn-primary btn-lg' %>
   </div>
 
   <ul>
-    <% @course.sections.each do |section| %>
+    <% current_course.sections.each do |section| %>
     <li>
       <%= section.title %>
       <%= link_to 'New Lesson', new_instructor_section_lesson_path(section), :class => 'pull-right btn btn-primary btn-xs' %>
