--- a/app/views/instructor/courses/show.html.erb
+++ b/app/views/instructor/courses/show.html.erb
@@ -4,6 +4,8 @@
   <h2 class="text-center"><%= current_course.description %>
   <br />
   <h3 class="text-center"><%= current_course.cost %></h3>
+  <%= image_tag @course.image, :class => 'img-responsive' %>
+
   <br />
   <%= link_to 'Preview As Student...', course_path(current_course), :class => 'btn btn-warning pull-right' %>
   <br class="clr" />
