--- a/app/views/courses/show.html.erb
+++ b/app/views/courses/show.html.erb
@@ -38,7 +38,10 @@
   </div>
 
   <div class="col-sm-8 col-xs-12">
-    <%= @course.sections.each do |section| %>
+    <!--<%= @course.sections.each do |section| %>-->
+
+    <%= course.sections.rank(:row_order).each do |section| %>
+
     <br /><br />
     <div class="section">
       <h3>
