--- a/app/views/courses/show.html.erb
+++ b/app/views/courses/show.html.erb
@@ -40,7 +40,7 @@
   <div class="col-sm-8 col-xs-12">
     <!--<%= @course.sections.each do |section| %>-->
 
-    <%= course.sections.rank(:row_order).each do |section| %>
+    <%= @course.sections.rank(:row_order).each do |section| %>
 
     <br /><br />
     <div class="section">
@@ -64,3 +64,4 @@
     <% end %>
   </div>
 </div>
+<% end %>
