--- a/app/views/instructor/courses/show.html.erb
+++ b/app/views/instructor/courses/show.html.erb
@@ -10,6 +10,17 @@
         });
       }
     });
+
+    $('.sections').sortable({
+      update: function( event, ui) {
+        $.ajax({
+          type: 'PUT', 
+          url: ui.item.data('update-url'),
+          dataType: 'json',
+          data: { section: { row_order_position: ui.item.inde() } }
+        });
+      }
+    });
   });
 </script>
 
@@ -30,11 +41,13 @@
     <%= link_to 'Add a new section...', new_instructor_course_section_path(current_course), :class => 'btn btn-primary btn-lg' %>
   </div>
 
-  <ul>
+  <ul class="sections">
     <!--Changed CODE HERE-->
     <% current_course.sections.rank(:row_order).each do |section| %>
     <li>
+      <li data-update-url="<%= instructor_section_path(section) %>">
       <%= section.title %>
+      </li>
       <%= link_to 'New Lesson', new_instructor_section_lesson_path(section), :class => 'pull-right btn btn-primary btn-xs' %>
         <ul class="lessons">
         <% section.lessons.rank(:row_order).each do |lesson| %>
