--- a/app/views/instructor/courses/show.html.erb
+++ b/app/views/instructor/courses/show.html.erb
@@ -37,9 +37,16 @@
   <br class="clr" />
   
 
-  <div class="text-center">
+  <!--<div class="text-center">
     <%= link_to 'Add a new section...', new_instructor_course_section_path(current_course), :class => 'btn btn-primary btn-lg' %>
-  </div>
+  </div>-->
+
+  <div class="text-center">
+<!-- Button trigger modal -->
+<button class="btn btn-primary btn-lg" data-toggle="modal" data-target="#newSectionModal">
+  Add a new section...
+</button>
+</div>
 
   <ul class="sections">
     <!--Changed CODE HERE-->
@@ -80,4 +87,25 @@
 </ul>
 
 
+</div>
+
+<!-- Modal -->
+<div class="modal fade" id="newSectionModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <div class="modal-header">
+        <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+        <h4 class="modal-title" id="newSectionModalLabel">Add a new section</h4>
+      </div>
+        <%= simple_form_for @section, :url => instructor_course_sections_path(current_course) do |f| %>
+        <div class="modal-body">
+          <%= f.input :title %>
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+          <%= f.submit "Add a section", :class => 'btn btn-primary' %>
+        </div>
+      <% end %>
+    </div>
+  </div>
 </div>
