--- a/app/views/instructor/courses/show.html.erb
+++ b/app/views/instructor/courses/show.html.erb
@@ -1,5 +1,12 @@
 <script>
   $(function() {
+    
+    $('.new-lesson-button').click(function( event ) {
+      var lessonUrl = $(event.target).data('lesson-url') 
+        );
+      $('#newLessonForm').attr('action', lessonUrl);
+    });
+
     $('.lessons').sortable({
       update: function( event, ui ) {
         $.ajax({
@@ -35,11 +42,6 @@
   <br />
   <%= link_to 'Preview As Student...', course_path(current_course), :class => 'btn btn-warning pull-right' %>
   <br class="clr" />
-  
-
-  <!--<div class="text-center">
-    <%= link_to 'Add a new section...', new_instructor_course_section_path(current_course), :class => 'btn btn-primary btn-lg' %>
-  </div>-->
 
   <div class="text-center">
 <!-- Button trigger modal -->
@@ -57,7 +59,11 @@
           <span class="glyphicon glyphicon-list"></span>
             <%= section.title %>
         </div>
-        <%= link_to 'New Lesson', new_instructor_section_lesson_path(section), :class => 'pull-right btn btn-primary btn-xs' %>
+
+        <!-- Button trigger modal -->
+        <button class="btn btn-primary btn-sm pull-right new-lesson-button" data-toggle="modal" data-target="#newLessonModal" data-lesson-url="<%= instructor_section_lessons_path(section) %>">
+          New Lesson...
+        </button>
 
         <br class="clr" />
         <br class="clr" />
@@ -104,6 +110,29 @@
       <div class="modal-footer">
         <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
           <%= f.submit "Add a section", :class => 'btn btn-primary' %>
+        </div>
+      <% end %>
+    </div>
+  </div>
+</div>
+
+<!-- Modal -->
+<div class="modal fade" id="newLessonModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <div class="modal-header">
+        <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+        <h4 class="modal-title" id="newLessonModalLabel">Add a new lesson</h4>
+      </div>
+        <%= simple_form_for @lesson, :url => "#", :html => {:id => 'newLessonForm' } do |f| %>
+          <div class="modal-body">
+          <%= f.input :title %>
+          <%= f.input :subtitle %>
+          <%= f.input :video %>
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+        <%= f.submit "Add the lesson", :class => 'btn btn-primary' %>
         </div>
       <% end %>
     </div>
