--- a/app/views/instructor/courses/show.html.erb
+++ b/app/views/instructor/courses/show.html.erb
@@ -2,8 +2,7 @@
   $(function() {
     
     $('.new-lesson-button').click(function( event ) {
-      var lessonUrl = $(event.target).data('lesson-url') 
-        );
+      var lessonUrl = $(event.target).data('lesson-url'); 
       $('#newLessonForm').attr('action', lessonUrl);
     });
 
