--- a/app/views/lessons/show.html.erb
+++ b/app/views/lessons/show.html.erb
@@ -3,7 +3,7 @@
 <div class="booyah-box col-xs-10 col-xs-offset-1">
   <h1><%= current_lesson.title %></h1>
   <p class="pull-left">
-  <p><%= current_lesson.subtitle %>
+    <%= current_lesson.subtitle %>
   </p>
 
   <% if current_lesson.next_lesson.present? %>
