--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -59,11 +59,47 @@
 
   <div id="footer">
     <div class="container">
+      <div class="col-xs-12 col-sm-3">
       <b>Teachers</b>
       <br />
       <%= link_to 'Teach a Course', new_instructor_course_path %>
+      <br />
+      <%= link_to 'My Dashboard', dashboard_path %>
     </div>
+    <div class="col-xs-12 col-sm-3">
+        <b>About</b>
+        <br />
+        <%= link_to 'Team', '#' %>
+        <br />
+        <%= link_to 'Careers', '#' %>
+        <br />
+        <%= link_to 'Privacy Policy', '#' %>
+      </div>
+      <div class="col-xs-12 col-sm-3">
+        <b>Contact</b>
+        <br />
+        whatever@fakeemail.com
+        <br />
+        One Kendall Square
+        <br />
+        Cambridge MA, 02113
+      </div>
+      <div class="col-xs-12 col-sm-3 social">
+        <b>Social</b>
+          <br />
+          <br />
+          <%= link_to 'http://github.com/' do %>
+          <%= image_tag 'github.png', :class => 'social-button' %>
+          <% end %>
+          <%= link_to 'http://facebook.com/' do %>
+          <%= image_tag 'facebook.png', :class => 'social-button' %>
+          <% end %>
+          <%= link_to 'http://twitter.com/' do %>
+          <%= image_tag 'twitter.png', :class => 'social-button' %>
+          <% end %>
+      </div>
   </div>
+</div>
 
 </body>
 </html>
